# pl-srv

./: README.md  compile  configure  defaults.conf  meson.build  pl-init.c  pl-srv.c
include/: libsrv.h  old-libsrv.h
src/: libsrv-error.c  libsrv-frontend-rewrite.c  libsrv-frontend.c  libsrv-parsing.c  libsrv-supervisor.c  libsrv.c  meson.build
